--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     
     <div class="content">
         <img src="https://images.unsplash.com/photo-1601577444409-48fee0314f72?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="pica" >
-
+<img src="https://images.unsplash.com/photo-1601574968106-b312ac309953?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1396&q=80" alt="office">
         <div class="title m-b-md">
-            The south's best Pizza
+            Hy, I AM HAZMA
         </div>
 
-        <!-- <div class="links">
+         <div class="links">
             <a href="https://laravel.com/docs">Docs</a>
             <a href="https://laracasts.com">Laracasts</a>
             <a href="https://laravel-news.com">News</a>
@@ -44,7 +44,7 @@
             <a href="https://nova.laravel.com">Nova</a>
             <a href="https://forge.laravel.com">Forge</a>
             <a href="https://github.com/laravel/laravel">GitHub</a>
-        </div> -->
+        </div> 
     </div>
 </div>
     
