--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Laravel</title>
+    <title>Hamza Bik.</title>
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,600" rel="stylesheet">
@@ -31,10 +31,11 @@
     
     <div class="content">
         <img src="https://images.unsplash.com/photo-1601577444409-48fee0314f72?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="pica" >
-<img src="https://images.unsplash.com/photo-1601574968106-b312ac309953?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1396&q=80" alt="office">
-        <div class="title m-b-md">
+         <div class="title m-b-md" style="position:absolute; top:100px; left:20px;>
             Hy, I AM HAZMA
-        </div>
+         </div>
+        <img src="https://images.unsplash.com/photo-1601574968106-b312ac309953?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1396&q=80" alt="office">
+        
 
          <div class="links">
             <a href="https://laravel.com/docs">Docs</a>
