--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
     
     <div class="flex-center position-ref full-heightcontent">
       <div class="content">
-        <img src="https://images.unsplash.com/photo-1601577444409-48fee0314f72?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="pica" >
          <div class="title m-b-md">
-            Hy, I AM HAZMA
+            Hello, I'M HAZMA a WEB Developer
          </div> 
+        <img src="https://images.unsplash.com/photo-1601577444409-48fee0314f72?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" alt="pica" >
+         
         <img src="https://images.unsplash.com/photo-1601574968106-b312ac309953?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1396&q=80" alt="office">
       </div>
     </div>
