--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <!-- Navigation -->
     <nav class="w3-bar w3-black">
         <a href="/" class="w3-button w3-bar-item">Home</a>
-        <a href="/pizzas/create" class="w3-button w3-bar-item">Order Pizza</a>
-        <a href="/pizzas" class="w3-button w3-bar-item">Pizzas</a>
+        <a href="#" class="w3-button w3-bar-item">About me</a>
+        <a href="https://github.com/Hamza-Bik" class="w3-button w3-bar-item" taget="_blink">GitHub</a>
         <a href="#contact" class="w3-button w3-bar-item">Contact</a>
     </nav>
     
