--- a/index.html
+++ b/index.html
@@ -42,12 +42,9 @@
 
     
     <footer class="w3-container w3-padding-64 w3-center w3-black w3-xlarge">
-        <a href="#"><i class="fa fa-facebook-official"></i></a>
-        <a href="#"><i class="fa fa-pinterest-p"></i></a>
         <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="#"><i class="fa fa-flickr"></i></a>
         <a href="#"><i class="fa fa-linkedin"></i></a>
-        <a href="#"><i class="fa fa-github"></i></a>
+        <a href="https://github.com/Hamza-Bik"><i class="fa fa-github"></i></a>
         <p class="w3-medium">
             Copyright <strong>©</strong> <?php echo (date('Y')); ?> -MY APP- Nonprofit organization. All rights reserved.
         </p>
