--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>BIKOURNE HAMZA</h1>
+								<p>Je suis un technicien spécialisé en techniques de développement informatique<br />
+								 Armé d'un profond sens des responsabilités et possédant un très haut niveau d'enthousiasme pour donner mon 110% à tout effort</p>
 							</div>
 						</div>
 						<nav>
