--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<div class="inner">
 								<h1>BIKOURNE HAMZA</h1>
 								<p>Je suis un technicien spécialisé en techniques de développement informatique<br />
-								 Armé d'un profond sens des responsabilités et possédant un très haut niveau d'enthousiasme pour donner mon 110% à tout effort</p>
+								 Armé d'un profond sens des responsabilités et possédant un très haut niveau d'enthousiasme<br>pour donner mon 110% à tout effort</p>
 							</div>
 						</div>
 						<nav>
@@ -47,8 +47,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>Orienté vers les objectifs et cherchant à améliorer mon expérience professionnelle avec une entreprise de TI spécialisée dans le développement Web. Capable de conceptualiser et de fournir des solutions élégantes et conviviales de manière efficace et efficiente.</p>
 							</article>
 
 						<!-- Work -->
