--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; HAPPYCODE. H.BIKOURNE: <a href="https://github.com/Hamza-Bik">GITHUB</a>.</p>
 					</footer>
 
 			</div>
