--- a/index.html
+++ b/index.html
@@ -50,8 +50,31 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>Compétences metriser:
+Javascript ES6 , Vue.js, Vuex ;
+
+Laravel 8 et PHP 8;
+
+Bootstrap CSS ( sass ,…);
+
+Tests unitaires; ( phpunit , mocking …)
+
+Design patterns;
+
+Conception Merise / UML;
+
+Architectures REST;
+
+BD sql ;
+
+Bonne connaissance de:
+DevOps ( docker);
+
+Système Unix / Bash ;
+
+Apache/ Nginx ;
+</p>
+								<p></p>
 							</article>
 
 						
