--- a/index.html
+++ b/index.html
@@ -81,7 +81,13 @@ Apache/ Nginx ;
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>Expérience de 2 ans en développement web Autonomie ;</p>
+									<ul>								
+										<option>Créativité ;</option>
+										<option>Capacité d’adaptation et d’intégration;</option>
+										<option>Capacité d’analyse, de conception et force de proposition ;</option>
+										<option>Ecoute et sens de la diplomatie.</option>
+									</ul>
 							</article>
 
 						
