--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						
 							<article id="about">
 								<h2 class="major">About</h2>
-<!-->style="height: 260px; width: 555px;"<!-->			<span class="image main"><img src="images/IMG_3340.JPG" alt="" /></span>
+								<span class="image main"><img src="images/IMG_3340.JPG" alt="" /></span>
 								<p>Expérience de 2 ans en développement web Autonomie ;</p>
 									<ul>								
 										<option>Créativité ;</option>
