--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img style="width=300" src="images/IMG_3317.JPG" alt="" /></span>
+								<span class="image main"><img style="width=350px;margin-left: auto;margin-right: auto;" src="images/IMG_3317.JPG" alt="" /></span>
 								<p>Orienté vers les objectifs et cherchant à améliorer mon expérience professionnelle avec une entreprise de TI spécialisée dans le développement Web. Capable de conceptualiser et de fournir des solutions élégantes et conviviales de manière efficace et efficiente.</p>
 							</article>
 
