--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">TECHNOLOGIES</a></li>
+								<li><a href="#work">DEV</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
