--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 						
 							<article id="work">
-								<h2 class="major">Work</h2>
+								<h2 class="major">DEV</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>
 									Compétences metriser:
